force-app/main/default/objects/NSSales_609_1_All_Switch_Coordinates__c/NSSales_609_1_All_Switch_Coordinates__c.object-meta.xml
<CustomObject>
    <label>All Switch Coordinate</label>
    <nameField>
        <displayFormat>SWC-{00000}</displayFormat>
        <label>AllSwitchCo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Switch Coordinates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>