force-app/main/default/objects/NSSales_609_1_All_Switch_Coordinates__c/fields/NSSales_Latitude__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Latitude__c</fullName>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>