force-app/main/default/objects/NSSales_609_1_All_Switch_Coordinates__c/fields/NSSales_Longitude__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Longitude__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>