force-app/main/default/objects/NSSales_609_1_All_Switch_Coordinates__c/fields/NSSales_Switch_Identification_Numbers__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Switch_Identification_Numbers__c</fullName>
    <label>Switch Identification Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>