force-app/main/default/objects/NSSales_609_1_All_Switch_Coordinates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NSSales_Switch_Identification_Numbers__c</columns>
    <columns>NSSales_Latitude__c</columns>
    <columns>NSSales_Longitude__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>